--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,10 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "handlebars": "^4.7.2"
+    "handlebars": "^4.7.2",
+    "hbs": "^4.1.0",
+    "lazysizes": "^5.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
