Installed Grunt Task Runner and Uglify

--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,10 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6"
+    "firebase-functions-test": "^0.1.6",
+    "grunt": "^1.0.4",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-uglify": "^4.0.1"
   },
   "private": true
 }
