--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,7 @@
     "firebase-functions-test": "^0.1.6",
     "grunt": "^1.0.4",
     "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.1"
   },
   "private": true
