--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "consolidate": "^0.15.1",
     "express": "^4.17.1",
+    "express-http-to-https": "^1.1.4",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "handlebars": "^4.7.2",
