--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "description": "The creative work of Product Designer Tyler Richardson",
   "icons": [
     {
-      "src": "/public/images/icon-192.png",
+      "src": "images/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
  },
     {
-      "src": "/public/images/icon-512.png",
+      "src": "images/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
