--- a/functions/package.json
+++ b/functions/package.json
@@ -12,12 +12,14 @@
     "node": "8"
   },
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.0.16",
     "consolidate": "^0.15.1",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "handlebars": "^4.7.2",
-    "hbs": "^4.1.0",
+    "handlebars": "^4.7.6",
+    "hbs": "^4.1.1",
+    "jquery": "^3.5.0",
     "lazysizes": "^5.2.0",
     "path": "^0.12.7"
   },
